--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,10 @@ header {
     display: inline-block;
     padding-left:10px;
     margin-bottom:10px;
+    -webkit-box-shadow: 0px 8px 10px -6px rgba(0,0,0,0.15); 
+    box-shadow: 0px 8px 10px -6px rgba(0,0,0,0.15);
 }
+
     ul.nav1 {
         display: inline-block;
         float:none;
